# CPong

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
include/: common.h  paddle.h  pong.h  puck.h
include/pong/: common.h  paddle.h  puck.h
src/: main.c  paddle.c  pong.c  puck.c
src/entity/: paddle.c  paddle.h  puck.c  puck.h
src/game/: common.h  pong.c  pong.h
test/: CMakeLists.txt  Pong.cpp  main.cpp  pong.cpp
